# docs/swagger.yaml
@@ -12,6 +12,9 @@ definitions:
         type: string
       status:
         type: string
+      success:
+        example: false
+        type: boolean
     type: object
   auth.FetchUserResponse:
     properties:
@@ -62,6 +65,9 @@ definitions:
         type: string
       status:
         type: string
+      success:
+        example: false
+        type: boolean
     type: object
   user.ListUsersResponse:
     properties:
@@ -132,7 +138,7 @@ paths:
             $ref: '#/definitions/auth.ErrorResponse'
       summary: Authenticate a user and receive access/refresh tokens
       tags:
-      - auth
+      - Auth
   /auth/refresh-token:
     post:
       consumes:
@@ -166,7 +172,7 @@ paths:
             $ref: '#/definitions/auth.ErrorResponse'
       summary: Refresh a user's access token
       tags:
-      - auth
+      - Auth
   /auth/user:
     get:
       consumes:
@@ -201,13 +207,18 @@ paths:
       - ApiKeyAuth: []
       summary: Get current authenticated user
       tags:
-      - auth
+      - Auth
   /users/:
     get:
       consumes:
       - application/json
       description: Get a paginated list of users
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Maximum results
         in: query
         name: limit
@@ -227,18 +238,29 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: List users
       tags:
-      - users
+      - Users
     post:
       consumes:
       - application/json
       description: Create a new user with name, email, and password
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create user request
         in: body
         name: request
@@ -256,6 +278,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
         "409":
           description: Conflict
           schema:
@@ -264,15 +290,22 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create a new user
       tags:
-      - users
+      - Users
   /users/{id}:
     delete:
       consumes:
       - application/json
       description: Delete a user by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
@@ -289,6 +322,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -297,14 +334,21 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete a user
       tags:
-      - users
+      - Users
     get:
       consumes:
       - application/json
       description: Get a user by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
@@ -321,6 +365,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -329,14 +377,21 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get user details
       tags:
-      - users
+      - Users
     put:
       consumes:
       - application/json
       description: Update user fields by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: id
@@ -359,6 +414,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -371,7 +430,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update a user
       tags:
-      - users
+      - Users
 swagger: "2.0"
