# internal/modules/auth/routes.go
@@ -2,6 +2,7 @@ package auth
 
 import (
 	"letsgo/internal/app"
+	"letsgo/internal/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -13,5 +14,5 @@ func Register(application *app.Application, router fiber.Router) {
 
 	auth.Post("/access-token", module.handler.AccessToken)
 	auth.Post("/refresh-token", module.handler.RefreshToken)
-	auth.Get("/user", module.handler.FetchUser)
+	auth.Get("/user", middleware.Auth(application), module.handler.FetchUser)
 }
