# internal/modules/user/routes.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"letsgo/internal/app"
+	"letsgo/internal/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -10,6 +11,7 @@ func Register(application *app.Application, router fiber.Router) {
 	module := NewModule(application)
 
 	users := router.Group("/users")
+	users.Use(middleware.Auth(application))
 
 	users.Get("/", module.handler.List)
 	users.Post("/", module.handler.Create)
